# Tianchi-competitions

./: .gitignore  2.ipynb  2.py  2TOP.py  2diff.py  2lab.py  2test.ipynb  7-1test.py  7-2.ipynb  7-2test.py  7.ipynb  7.py  7test-iwt.py  7test.py  8-2.py  8.ipynb  8.py  8diff.py  8lab.py  README.md  diff.md  iwt_example.py  lab.py  pyproject.toml  solution.md  tabm_example.py  tabm_momo.py  tabm_wsam.py  util.py
models/: MyTabMClassifier.py  My_TabM_HPO_Classifier.py  helper.py  iwt_classifier.py  tabm.py
